// Copyright 2018 budougumi0617 All Rights Reserved.

syntax = "proto3";

package tasklistgateway;

// For define null request
import "google/protobuf/empty.proto";

// For grpc gateway
import "google/api/annotations.proto";

service TaskManager {
  rpc GetTask (GetTaskRequest) returns (Task) {
    option (google.api.http) = {
       get: "/v1/tasklist-gateway/task/{id}" // "id" is defined in GetTaskRequest
    };
  }
  rpc ListTasks (google.protobuf.Empty) returns (stream Task) {
    option (google.api.http) = {
       get: "/v1/tasklist-gateway/task"
    };
  }
}

message Task {
  int32 id = 1;
  string title = 2;
  string detail = 3;
}

message GetTaskRequest {
  int32 id = 1;
}
